--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/head": "^2.0.0",
     "@vueuse/motion": "^2.0.0",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
